--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,56 +1,38 @@
 .App {
-  background-color: #12111C;
-  min-height: 100vh;
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
 .App-header {
-  display: flex;
-  flex-direction: row;
-  padding: 2vh 16vw;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.Text-header {
-  font-family: sans-serif;
-  color: #fff;
-  font-size: 24px;
-  font-weight: 600;
-}
-
-.Wallet-button {
-  font-family: sans-serif;
-  color: #fff;
-  border:  2px solid #fff;
-  border-radius: 8%;
-  background: transparent;
-  display: inline-block;
-  font-size: 14px;
-  white-space: normal;
-  cursor: pointer;
-  padding: 10px 18px;
-}
-
-.Text-title-big {
-  font-family: sans-serif;
-  color: #fff;
-  font-size: 48px;
-  font-weight: 800;
-}
-
-.Text-title-small {
-  font-family: sans-serif;
-  color: #fff;
-  font-size: 14px;
-  font-weight: 600;
-  margin-top: 2vh;
-}
-
-.Main-container {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  min-width: 100vw;
   align-items: center;
   justify-content: center;
-  padding: 5vh 0;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
