--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,6 +29,7 @@
 	white-space: normal;
 	cursor: pointer;
 	padding: 10px 18px;
+
 }
 
 .Text-title-big {
@@ -53,4 +54,10 @@
 	align-items: center;
 	justify-content: center;
 	padding: 5vh 0;
+}
+
+.Green-border {
+	box-shadow: 0px 0px 12px 5px rgb(101, 209, 124);
+	border-radius: 3px;
+	border:  2px solid rgb(101, 209, 124);
 }
