--- a/client/src/components/APIForm.css
+++ b/client/src/components/APIForm.css
@@ -10,6 +10,7 @@
 .menu-form {
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
 }
 
 .description {
@@ -25,8 +26,12 @@
 	justify-content: center;
 }
 
+.eth-logo.token-logo {
+	margin-right: 25px;
+}
+
 .token-logo {
-	width: 12%;
+	max-width: 100%;
 	height: 70%;
 	margin-right: 15px;
 }
@@ -35,24 +40,39 @@
 	color: #fff;
 }
 
-.amount {
+.send-amount {
 	background-color: transparent;
 	color: white;
 	text-align: center;
 	font-size: 18px;
 	width: 60%;
 	margin-top: 7px;
-	height: 48px;
+	height: 48.5px;
 	border: 1px solid #464646;
 	border-radius: 8px;
 }
   
-.amount:focus {
+.send-amount:focus {
 	outline: none;
 }
 
-.amount:focus-within {
+.send-amount:focus-within {
 	border: 2px solid #BDBDBD;
+}
+
+.receive-amount {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: transparent;
+	color: white;
+	text-align: center;
+	font-size: 18px;
+	width: 60%;
+	margin-top: 7px;
+	height: 48.5px;
+	border: 1px solid #464646;
+	border-radius: 8px;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -89,7 +109,8 @@ input[type=number] {
 .label {
 	margin-left: 12px;
 	margin-right: 12px;
-	width: 27%;
+	width: 50%;
+	display: inline-block;
 }
 
 .gear-logo {
@@ -98,6 +119,7 @@ input[type=number] {
 
 .data {
 	color: white;
+	float: right;
 }
 
 .close-icon {
